--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 Файл Glav.htm 
+<slash>
 <!DOCTYPE HTML> 
 <html> 
 <head><title>Block_Verstka</title> 
@@ -21,7 +22,7 @@
 </div> 
 <div class="clear"></div> 
 <div class="footer">Footer 
-<p> CopyrightRPZ 2024-2025 </p> </div> </div> </body></html>
+<p> CopyrightRPZ 2024-2025 </p> </div> </div> </body></html></slash>
 Файл style.css
 body, html { 
 width: 100%; 
