--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 </div> 
 <div class="clear"></div> 
 <div class="footer">Footer 
-<p> CopyrightRPZ 2024-2025 </p> </div> </div> </body></html></slash>
+<p> CopyrightRPZ 2024-2025 </p> </div> </div> </body></html>
+</slash>
 Файл style.css
 body, html { 
 width: 100%; 
