--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<slash>
 Файл Glav.htm 
 <!DOCTYPE HTML> 
 <html> 
@@ -92,3 +93,4 @@ font-size: 20px;
 line-height: 24px; 
 text-align: center; 
 text-transform: uppercase;}
+</slash>
