--- a/index.html
+++ b/index.html
@@ -2,95 +2,28 @@
 Файл Glav.htm 
 <!DOCTYPE HTML> 
 <html> 
-<head><title>Block_Verstka</title> 
+<head><title>Homepage</title> 
 <link rel="stylesheet" type="text/css" href="style1.css"> </head> 
 <body link= "white" alink="red"> 
 <div class="all"> 
 <div class="logo"> 
-<img src="Lighthouse.jpg" height="100" width="250"> </div> 
-<div class="top"> Програмний пакет Мacromedia Flash </div> <div class="left"> MENU 
-<p> <a href="1.htm">Головна </a></p> 
-<p> <a href="2.htm">Історія </a></p> <p> <a href="3.htm">Галерея</a></p> </div> 
-<div class="content"> 
-<pre> </pre> 
-<р>> Програмний пакет Масгomedia Flash (надалі просто Flash) потужний інструмент, що полегшує створення анімованих WEB-сторінок. Модель графіки в Flash являє собою комбінацію растровоїй векторної графіки, з'єднуючи в собі позитивні сторони обох графічних представлень. 
-Основний елемент, за допомогою якого створюється анімація часовалінійка (Time Line). На відміну від мультиплікації, при якій доводиться малювати всі кадри, 
-що відбивають процес зміни або рухи, Flash дозволяє малювати тільки ключові кадри (Keyframe), 
-а зображення в кадрах, що перебувають між ключовими, виконується 
-програмно, що, природно, полегшує роботу. </p> 
-<p align="center"><img src="kotik.jpg" height="100" width="86"> </p> 
-</div> 
-<div class="clear"></div> 
-<div class="footer">Footer 
-<p> CopyrightRPZ 2024-2025 </p> </div> </div> </body></html>
-Файл style.css
-body, html { 
-width: 100%; 
-min-width: 1000px; 
-height: 100%; 
-margin: 0; /* поля */
-padding: 0;/*відстань від поля до текста*/
-font-family: Tahoma; 
-background:#ffffff; 
-color: #ffffff;} 
-/* 
-width: 1000pxх; - це ширина 1000 рх у блока; 
-margin: 0 auto; - блок буде вирівняний по центру відносно батьківського блока. 
-padding: 20px 0; - внутрішні відступи у нашого блока по 20 пикселів; 
-margin: 0; - зовнішні відступи нашого блока від інших; 
-color: #ffffff;білий; - колір текста, #ffffff 
-background: #ffffff; - колір фона блока, білий; 
-font-size: 20px; - розмір шрифта в пікселях; 
-line-height: 24px; висота лінії текста; 
-text-transform: uppercase; - всі літери великі */
-.all { 
-width: 1000px; 
-margin: 0 auto; 
-} 
-.logo { 
-background: #009e9d; 
-width: 250px; 
-height: 100px; 
-padding: 10px 0; 
-float: left;}
-.top{ 
-height: 100px; float: left; padding: 10px 0; 
-font-size: 30px; 
-line-height: 24px; 
-text-align: center; 
-text-transform: uppercase; /* Прошсные буквы */}
-.left{ 
-background: #0010d5; 
-float: left; 
-width: 250px; 
-height: 300px; 
-font-size: 20px; text-align: center; 
-text-transform: uppercase;} 
-.content { 
-background: #979696; 
-float: left; 
-width: 750px; 
-height: 300px; 
-text-indent: 20; 
-text-indent: 10 px; 
-line-height: 24px; /* Міжрядковий інтервал */
-text-align: justify; /* Вирівнювання по ширині */} 
-.clear { 
-clear: both; 
-*/Щоб визначити, чи має контент, який «обтікає» float-блок, бути скинутий вниз, ми використовуємо clear властивість. 
-Список можливих значень властивості: 
-left - не допускає обтікання "float" блоку зліва 
-right - забороняє обтікання блоку праворуч 
-both - забороняє обтікання блоку із двох сторін, тобто зліва, 
-i праворуч, nоne - дозволено обтікання
-*/ 
-}
-.footer { 
-background: #28282a; 
-padding: 100px 0; 
-padding: 50px 0; 
-font-size: 20px; 
-line-height: 24px; 
-text-align: center; 
-text-transform: uppercase;}
-</slash>
+<img src="Logo.jpg" height="113" width="226"> </div>
+<img src="Image 11.jpg" height="850" width="1920"> </div>
+<div class="top"> Vision </div>
+<div class="top"> We believe in long-term growth with an emphasis on the potential of emerging markets. We also support the global need of feeding the growing population. </div>
+<img src=>"Image 12.jpg" height="498" width="540"> </div>
+<div class="top"> Mission </div>
+<div class="top"> Breeding and marketing seeds for advanced field crops and vegetable varieties that provide an added value to all supply chain partners. </div>
+<div class="top"> AGRIDERA’S MAIN ACTIVITIES </div>
+<img src="Image 13.jpg" height="261" width="354"> </div>
+<div class="top"> Open field crop seeds </div>
+<div class="top"> wheat, cotton, legumes, hybrid confection sunflower </div>
+<img src="Image 14.jpg" height="232" width="232"> </div>
+<div class="top"> Vegetable seeds </div>
+<div class="top"> hybrid open field tomatoes, eggplant, onion, paprika, etc. </div>
+<img src="Image 15.jpg" height="213" width="295"> </div>
+<div class="top"> Ornamental seeds </div>
+<div class="top"> hybrid cut sunflowers, hybrid patio tomatoes, Bells of Irland, etc. </div>
+<div class="top"> PROFILE           MANAGEMENT          PRODUCTS           R&D           LINKS           SITEMAP           CONTACT </div>  
+<div class="top"> AGRIDERA SEEDS & AGRICULTURE LTD. © 2020 </div> 
+</html>
