--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="top"> Vision </div>
 <div class="top"> We believe in long-term growth with an emphasis on the potential of emerging markets. We also support the global need of feeding the growing population. </div>
 <img src=>"Image 12.jpg" height="498" width="540"> </div>
-<div class="top"> Mission </div>
+<p align=right><div class="top"> Mission </div>
 <div class="top"> Breeding and marketing seeds for advanced field crops and vegetable varieties that provide an added value to all supply chain partners. </div>
 <div class="top"> AGRIDERA’S MAIN ACTIVITIES </div>
 <img src="Image 13.jpg" height="261" width="354"> </div>
