--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="top"> Breeding and marketing seeds for advanced field crops and vegetable varieties that provide an added value to all supply chain partners. </div>
 <div class="top"> AGRIDERA’S MAIN ACTIVITIES </div>
 <img src="Image 13.jpg" height="261" width="354"> </div>
-<div class="top"> Open field crop seeds </div>
+<UL TYPE=DISK> <color=green face-times new roman> Базовий склад пк </font>
 <div class="top"> wheat, cotton, legumes, hybrid confection sunflower </div>
 <img src="Image 14.jpg" height="232" width="232"> </div>
 <div class="top"> Vegetable seeds </div>
