--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <img src=>"Image 12.jpg" height="498" width="540"> </div>
 <p align=right> Mission </font> </p>
 <div class="top"> Breeding and marketing seeds for advanced field crops and vegetable varieties that provide an added value to all supply chain partners. </div>
-<div class="top"> AGRIDERA’S MAIN ACTIVITIES </div>
+<div class="top"><p align=center>  AGRIDERA’S MAIN ACTIVITIES </div>
 <img src="Image 13.jpg" height="261" width="354"> </div>
 <UL TYPE=DISK> <color=green face-times new roman> Базовий склад пк </font>
 <div class="top"> wheat, cotton, legumes, hybrid confection sunflower </div>
