--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="top"> We believe in long-term growth with an emphasis on the potential of emerging markets. We also support the global need of feeding the growing population. </div>
 <img src=>"Image 12.jpg" height="498" width="540"> </div>
 <p align=right> Mission </font> </p>
-<div class="top"> Breeding and marketing seeds for advanced field crops and vegetable varieties that provide an added value to all supply chain partners. </div>
+<p align=right> Breeding and marketing seeds for advanced field crops and vegetable varieties that provide an added value to all supply chain partners. </font> </p>
 <div class="top"><p align=center>  AGRIDERA’S MAIN ACTIVITIES </div>
 <img src="Image 13.jpg" height="261" width="354"> </div>
 <p align=left> <font size=6 color=greеn> Open field crop seeds </font> </p>
