--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <img src="Image 13.jpg" height="261" width="354"> </div>
 <p align=left> <font size=6 color=greеn> Open field crop seeds </font> </p>
 <div class="top"> wheat, cotton, legumes, hybrid confection sunflower </div>
-<img src="Image 14.jpg" height="232" width="232"> </div>
-<div class="top"> Vegetable seeds </div>
+<p align=center> <img src="Image 14.jpg" height="232" width="232"> </div>
+<p align=center> <font size=6 color=greеn> Vegetable seeds </font> </p>
 <div class="top"> hybrid open field tomatoes, eggplant, onion, paprika, etc. </div>
-<img src="Image 15.jpg" height="213" width="295"> </div>
-<div class="top"> Ornamental seeds </div>
+<p align=right> <img src="Image 15.jpg" height="213" width="295"> </div>
+<p align=center> <font size=6 color=greеn> Ornamental seeds  </font> </p>
 <div class="top"> hybrid cut sunflowers, hybrid patio tomatoes, Bells of Irland, etc. </div>
 <div class="top"> PROFILE           MANAGEMENT          PRODUCTS           R&D           LINKS           SITEMAP           CONTACT </div>  
-<div class="top"> AGRIDERA SEEDS & AGRICULTURE LTD. © 2020 </div> 
+<div class="top"><p align=center> AGRIDERA SEEDS & AGRICULTURE LTD. © 2020 </div> 
 </html>
