--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <p align=center> <font size=6 color=greеn> Vegetable seeds </font> </p>
 <div class="top"> hybrid open field tomatoes, eggplant, onion, paprika, etc. </div>
 <p align=right> <img src="Image 15.jpg" height="213" width="295"> </div>
-<p align=center> <font size=6 color=greеn> Ornamental seeds  </font> </p>
+<p align=right> <font size=6 color=greеn> Ornamental seeds  </font> </p>
 <div class="top"> hybrid cut sunflowers, hybrid patio tomatoes, Bells of Irland, etc. </div>
 <div class="top"> PROFILE           MANAGEMENT          PRODUCTS           R&D           LINKS           SITEMAP           CONTACT </div>  
 <div class="top"><p align=center> AGRIDERA SEEDS & AGRICULTURE LTD. © 2020 </div> 
