--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <img src="Image 11.jpg" height="850" width="1920"> </div>
 <div class="top"> Vision </div>
 <div class="top"> We believe in long-term growth with an emphasis on the potential of emerging markets. We also support the global need of feeding the growing population. </div>
-<img src=>"Image 12.jpg" height="498" width="540"> </div>
+<p align=left><img src="Image 12.jpg" height="498" width="540"> </div>
 <p align=right> Mission </font> </p>
 <p align=right> Breeding and marketing seeds for advanced field crops and vegetable varieties that provide an added value to all supply chain partners. </font> </p>
 <div class="top"><p align=center>  AGRIDERA’S MAIN ACTIVITIES </div>
