--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <div class="logo"> 
 <img src="Logo.jpg" height="113" width="226"> </div>
 <img src="Image 11.jpg" height="850" width="1920"> </div>
-<div class="top"> Vision </div>
+<p align=left> <font size=6 color=black> Vision </font> </p>
 <div class="top"> We believe in long-term growth with an emphasis on the potential of emerging markets. We also support the global need of feeding the growing population. </div>
 <p align=left><img src="Image 12.jpg" height="498" width="540"> </div>
-<p align=right> Mission </font> </p>
+<p align=right> <font size=6 color=black> Mission </font> </p>
 <p align=right> Breeding and marketing seeds for advanced field crops and vegetable varieties that provide an added value to all supply chain partners. </font> </p>
-<div class="top"><p align=center>  AGRIDERA’S MAIN ACTIVITIES </div>
+<p align=center> <font size=6 color=black>  AGRIDERA’S MAIN ACTIVITIES </font> </p>
 <img src="Image 13.jpg" height="261" width="354"> </div>
 <p align=left> <font size=6 color=greеn> Open field crop seeds </font> </p>
 <div class="top"> wheat, cotton, legumes, hybrid confection sunflower </div>
